# Gomi

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
resources/: entitlements.plist  icon.icns  info.plist
src/: config.rs  icons.rs  main.rs  message.rs  storage.rs  subscriptions.rs
src/components/: footer.rs  icon_button.rs  icons.rs  list_item.rs  mod.rs  scroll_view.rs
src/pages/: edit_match_value.rs  mod.rs  rule_manager.rs  select_browser.rs  select_profile.rs  set_default_browser.rs
src/pages/components/: browser_list_item.rs  footer.rs  icon_button.rs  icons.rs  mod.rs
src/platform_tools/: mod.rs
